staging/zoom-translation/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zoom-translation-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zoom-translation-backend
  template:
    metadata:
      labels:
        app: zoom-translation-backend
    spec:
      imagePullSecrets:
        - name: jcarpenter-uam-ghcr-secret
      containers:
        - name: zoom-translation-backend
          image: ghcr.io/jcarpenter-uam/zoom-translation/zoom-translation-backend:v1.0.0 # {"$imagepolicy": "flux-system:zoom-translation-backend"}
          ports:
            - containerPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zoom-translation-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zoom-translation-frontend
  template:
    metadata:
      labels:
        app: zoom-translation-frontend
    spec:
      imagePullSecrets:
        - name: jcarpenter-uam-ghcr-secret
      containers:
        - name: zoom-translation-frontend
          image: ghcr.io/jcarpenter-uam/zoom-translation/zoom-translation-frontend:v1.0 # {"$imagepolicy": "flux-system:zoom-translation-frontend"}
          ports:
            - containerPort: 4173
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zoom-translation-rtms
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zoom-translation-rtms
  template:
    metadata:
      labels:
        app: zoom-translation-rtms
    spec:
      imagePullSecrets:
        - name: jcarpenter-uam-ghcr-secret
      containers:
        - name: zoom-translation-rtms
          image: ghcr.io/jcarpenter-uam/zoom-translation/zoom-translation-rtms:v1.0 # {"$imagepolicy": "flux-system:zoom-translation-rtms"}
          ports:
            - containerPort: 8080
