staging/zoom-translation/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: zoom-translation-server
spec:
  selector:
    app: zoom-translation-server
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: zoom-translation-rtms
spec:
  type: ClusterIP
  selector:
    app: zoom-translation-rtms
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
