staging/zoom-translation/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: zoom-translation-ingress
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`translator.home.my-uam.com`) && PathPrefix(`/zoom`)
      kind: Rule
      services:
        - name: zoom-translation-rtms
          port: 8080

    - match: Host(`translator.home.my-uam.com`)
      kind: Rule
      services:
        - name: zoom-translation-server
          port: 8000
  tls:
    secretName: zoom-translation-certificate-secret
